<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/iBFloppyCube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCube"
                android:src="@drawable/fcube_logo_128x"
                android:tag="@string/tab_ef" />

            <ImageButton
                android:id="@+id/iBFloppyVisual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickSave"
                android:src="@drawable/sampler_128x163"
                android:tag="@string/tab_ef" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/rbRainbow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rainbow"
                    android:textColor="#cc510e"
                    android:onClick="onSelectRadioButton"
                    android:tag="@string/rb_rainbow"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/rbRainbowCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rainbow circle"
                    android:textColor="#cc510e"
                    android:onClick="onSelectRadioButton"
                    android:tag="@string/rb_rainbow_circle"                    
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/rbFade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fade"
                    android:textColor="#cc510e"
                    android:onClick="onSelectRadioButton"
                    android:tag="@string/rb_fade"                    
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvFadeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <NumberPicker
                    android:id="@+id/npNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </NumberPicker>

                <TextView
                    android:id="@+id/tvFadeDelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delay"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <NumberPicker
                    android:id="@+id/npDelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>