<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llVisualRemote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/iBFloppyCube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCube"
                android:src="@drawable/fcube_logo_128x"
                android:tag="@string/tab_vi" />
            
            
            <ImageButton
                android:id="@+id/iBFloppyVisual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickSave"
                android:src="@drawable/sampler_128x163"
                android:tag="@string/tab_vi" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvColorSample"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

<!--         <LinearLayout -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="wrap_content" > -->

<!--             <TextView -->
<!--                 android:id="@+id/tvColorSeparator" -->
<!--                 android:layout_width="fill_parent" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:gravity="left" -->
<!--                 android:text="Colors" -->
<!--                 android:textColor="#cc510e" -->
<!--                 android:textSize="30dp" /> -->

<!--         </LinearLayout> -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewRedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="R"
                    android:textSize="30dp"/>

                <SeekBar
                    android:id="@+id/seekBarRed"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textViewRedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="#ff0000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewGreenLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="G"
                    android:textSize="30dp"/>

                <SeekBar
                    android:id="@+id/seekBarGreen"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textViewGreenValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="#00ff00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewBlueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="B"
                    android:textSize="30dp"/>

                <SeekBar
                    android:id="@+id/seekBarBlue"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textViewBlueValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30dp"
                    android:textColor="#0000ff" />
            </LinearLayout>
        </LinearLayout>
        
    
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="left"
            android:orientation="vertical" >


            
            


                <RadioButton
                    android:id="@+id/rbFullColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Fully coloured"
                    android:textColor="#cc510e"
                    android:onClick="onSelectColorRadioButton"
                    android:tag="@string/rb_fully"
                    android:textSize="30dp" />

                <RadioButton
                    android:id="@+id/rbPartColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Partly coloured"
                    android:textColor="#cc510e"
                    android:onClick="onSelectColorRadioButton"
                    android:tag="@string/rb_partly"                    
                    android:textSize="30dp" />

                        
        </LinearLayout>
                
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_weight="1" >
            

                <TextView
                    android:id="@+id/tvLedStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <NumberPicker
                    android:id="@+id/npLedStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </NumberPicker>

                <TextView
                    android:id="@+id/tvLedStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Stop"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <NumberPicker
                    android:id="@+id/npLedStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>        
        
    </LinearLayout>

</ScrollView>